[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/OctetDisplay.gd" type="Script" id=1]

[node name="OctetDisplay" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OctetSection0" type="Label" parent="."]
margin_top = 393.0
margin_right = 4.0
margin_bottom = 407.0
text = "."
valign = 2

[node name="OctetSection1" type="Label" parent="."]
margin_left = 8.0
margin_top = 393.0
margin_right = 12.0
margin_bottom = 407.0
text = "."
valign = 2

[node name="OctetSection2" type="Label" parent="."]
margin_left = 16.0
margin_top = 393.0
margin_right = 20.0
margin_bottom = 407.0
text = "."
valign = 2

[node name="OctetSection3" type="Label" parent="."]
margin_left = 24.0
margin_top = 393.0
margin_right = 28.0
margin_bottom = 407.0
text = "."
valign = 2
